# hamza-backend-web-library-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  ItemStore.hpp  README.md  app.cpp  example.cpp  get.js  post.js  run.sh  strss.js  web-lib.hpp
docs/: web_exceptions.md  web_request.md  web_response.md  web_route.md  web_router.md  web_server.md  web_types.md  web_utilities.md
docs/used-files/: 404.html  index.html
example/: test.cpp
html/: 404.html  body.html  footer.html  header.html  index.html  project.html
includes/: logger.hpp  thread_pool.hpp  web_exceptions.hpp  web_helpers.hpp  web_methods.hpp  web_request.hpp  web_response.hpp  web_route.hpp  web_router.hpp  web_server.hpp  web_types.hpp  web_utilities.hpp
src/: logger.cpp  web_helpers.cpp  web_methods.cpp  web_utilities.cpp
static/: app.js  style.css  x.css
test/: package-lock.json  package.json  stress_test_app.js  stress_test_readme.md
